# swig-autodiff

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
src/: .gitignore  CMakeLists.txt  test_wrapper.py  wrapper.i
